footer h4 fix color contrast

--- a/style/_footer.scss
+++ b/style/_footer.scss
@@ -54,7 +54,8 @@
             h4 {
                 font-size: 1rem;
                 font-family: Karla, sans-serif;
-                color: $dark-grayish-violet;
+                // color: $dark-grayish-violet;
+                color: #5A565D;
             }
 
             ul {
@@ -131,7 +132,8 @@
                 h4 {
                     font-size: 1rem;
                     font-family: Karla, sans-serif;
-                    color: $dark-grayish-violet;
+                    // color: $dark-grayish-violet;
+                    color: #5A565D;
                 }
 
                 ul {
